7311: Refactor some usages of GetHeaadersFromPeerByNumberTask
Signed-off-by: Matilda Clerke <matilda.clerke@consensys.net>